# translate-shell-py

./: .gitignore  PKGBUILD  pyproject.toml
src/: interactive.py  langdata.py  main.py  misc.py  translate.py  unimpl.py
src/engines/: bing_translator.py  google_translate.py
src/translate_shell_py/: __main__.py  audio.py  config.py  interactive.py  langdata.py  misc.py  parser.py  theme.py  translate.py
src/translate_shell_py/engines/: bing_translator.py  google_translate.py
